# ResBlaster

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ResBlaster/: ResBlaster.py  __init__.py
ResBlaster.egg-info/: PKG-INFO  PKG-INFO-NSConflict-hbucqp-mac12.4  SOURCES-NSConflict-hbucqp-mac12.4.txt  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ResBlaster/db/: resfinder.fsa  resfinder.ndb  resfinder.nin  resfinder.not  resfinder.nsq  resfinder.nto  rpoB.fsa  rpoB.ndb  rpoB.nin
src/ResBlaster/: ResBlaster.py  __init__.py
src/ResBlaster/db/: bacmet1.fsa  bacmet2_exp.fsa  resfinder.fsa  vf_hps.fsa
